v10.4.0/_sources/generated/pcdsdevices.lasers.rfof.CycleRfofTx.rst.txt
pcdsdevices.lasers.rfof.CycleRfofTx
===================================

.. currentmodule:: pcdsdevices.lasers.rfof

.. autoclass:: CycleRfofTx

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - rf_temperature
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:RFTEMPERATURE``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lasers.rfof.CycleRfofRx`
    
        * - rf_power
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:RFPOWER``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lasers.rfof.CycleRfofRx`
    
        * - optical_power
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPTICALPOWER``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lasers.rfof.CycleRfofRx`
    
        * - enable_laser
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:ENABLELASER``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: subscriptions
    
    